Solve sonarcloud issues
Signed-off-by: freddidierRTE <frederic-f.didier@rte-france.com>